# libuzmq

./: .gitignore  CMakeLists.txt  README.md  UserspaceZeroMQConfig.cmake.in
builds/: ZeroMQConfigVersion.cmake  ZeroMQTargets.cmake  libzmq.pc  platform.hpp  version.rc
builds/cmake/Modules/: ZMQSourceRunChecks.cmake
builds/lib/: libzmq.so.5.1.3
include/: zmq.h
lwip/src/: Filelists.cmake
lwip/src/api/: api_lib.c  api_msg.c  netdb.c  sockets.c  tcpip.c
lwip/src/api/.deps/: src_libzmq_la-api_lib.Plo  (+8 more)
lwip/src/core/: hash.c  hmap.c  list.c  pbuf.c  tcp.c  tcp_in.c  tcp_out.c  util.c
lwip/src/unix/: sys_arch.c
lwip/test/lwiptest/: CMakeLists.txt  lwipopts.h  main.c  socket_api.c  socket_api.h
src/: blob.hpp  ctx.cpp  curve_client.cpp  curve_client_tools.hpp  curve_mechanism_base.cpp  curve_server.cpp  decoder_allocators.cpp  decoder_allocators.hpp  encoder.hpp  epoll.cpp  epoll.hpp  err.cpp  gssapi_client.cpp  gssapi_mechanism_base.cpp  gssapi_server.cpp  io_object.cpp  io_object.hpp  io_thread.cpp  ip.cpp  ip.hpp  ipc_connecter.cpp  libuzmq.pc.cmake.in  libzmq.pc  libzmq.pc.in  lwip.cpp  lwipopts.h  msg.cpp  msg.hpp  mtrie.cpp  norm_engine.cpp  pgm_sender.cpp  pgm_socket.cpp  pipe.cpp  platform.hpp.in  platform.hpp.in~  proxy.cpp  req.cpp  signaler.cpp  socket_base.cpp  socket_base.hpp  (+28 more)
src/.deps/: src_libzmq_la-address.Plo  src_libzmq_la-client.Plo  src_libzmq_la-ctx.Plo  src_libzmq_la-curve_client.Plo  src_libzmq_la-curve_mechanism_base.Plo  src_libzmq_la-curve_server.Plo  src_libzmq_la-dealer.Plo  src_libzmq_la-devpoll.Plo  src_libzmq_la-dgram.Plo  src_libzmq_la-dish.Plo  src_libzmq_la-epoll.Plo  src_libzmq_la-gather.Plo  src_libzmq_la-io_object.Plo  src_libzmq_la-io_thread.Plo  src_libzmq_la-ip.Plo  src_libzmq_la-ipc_connecter.Plo  src_libzmq_la-ipc_listener.Plo  src_libzmq_la-kqueue.Plo  src_libzmq_la-lwip.Plo  src_libzmq_la-lwip_select.Plo  src_libzmq_la-mechanism.Plo  src_libzmq_la-mechanism_base.Plo  src_libzmq_la-null_mechanism.Plo  src_libzmq_la-object.Plo  src_libzmq_la-options.Plo  src_libzmq_la-own.Plo  src_libzmq_la-pair.Plo  src_libzmq_la-plain_client.Plo  src_libzmq_la-plain_server.Plo  src_libzmq_la-poll.Plo  src_libzmq_la-pollset.Plo  src_libzmq_la-proxy.Plo  src_libzmq_la-pub.Plo  src_libzmq_la-pull.Plo  src_libzmq_la-push.Plo  src_libzmq_la-radio.Plo  src_libzmq_la-reaper.Plo  src_libzmq_la-rep.Plo  src_libzmq_la-req.Plo  src_libzmq_la-router.Plo  (+23 more)
test/: CMakeLists.txt  test_client.cpp  test_server.cpp  util.hpp
(+70 files in other folders)
